      with no problems, and the program works as expected.
      NB: an "autoreconf -f -i" into the vusaged directory is needed before 
      configuring, as the configure.ac was modified.
    - A "recipient check" program to be used with E. Hoffmann's s/qmail.
      Look at doc/README.vrcptcheck for more info.
    - A patch which gets vpopmail to compile with gcc-10
  
  - Merge patches by Rolf Eike Beer:
    - Fix strncat warnings
    - Fix printf format strings
    - Fix build when using PostgreSQL and --enable-onchange-script
    - Add test for crypt return value
    - Remove unneeded forward declaration in vchkpw.c
    - Add missing include in cdb_seek.c
    - Add static in vdelivermail.c
    - Clean up calling maildrop in vdelivermail.c
    - Remove unneeded reallocation in vpalias.c
    - vpopmail-lazy.patch
    - fix ,S= tag in case spamassassin changed the file size
    - fix those vfork() instances that do more than exec*() 
    
  - Merge patch from Ivan Zahariev:
    -  backfill algo fails if the username is contained anywhere in the file path 
      
  - Merge patch from Paul Oehler:
     - Fix bug in string_list_add when resizing the list
     
  - Merge patch from Nathanaël Semhoun:
     - Fixes for compiling without log on change, and fixe for included files
     - We need to remove | or ' ' before creating the args[] for sh, otherwise | 
       will be an argument of bash.
       
  Patrice Duhamel
  - Add an option --enable-onchange-script-before-and-after to call onchange
    script before and after a change
  - Add SQLite module, adapted from MySQL module code
  - Add an option --enable-sha512-passwords by default, and increase all 
    sql modules password size
  - Disable clear password option by default
  - Set vpasswd, vadddomain and vadduser default password length to 12, 
    and add optional password length in vpasswd
  - Fix crash in vpasswd, vadduser, vadddomain for very long password